# local_fileSystem_MCP

./: Dockerfile  README.md  main.py  mcp.json  pyproject.toml  smithery.yaml
local_filesystem_mcp/: http_server.py  server.py
